[gd_scene load_steps=19 format=3 uid="uid://q7et66trvhld"]

[ext_resource type="FontFile" uid="uid://dckyut1557c7h" path="res://DarkTheme/Fonts/Ubuntu-L.ttf" id="1_bron4"]
[ext_resource type="FontFile" uid="uid://r7guvh1d66vn" path="res://Theme/HyperSuperItalic.ttf" id="2_wvpdx"]
[ext_resource type="Script" path="res://ReplaySelector.gd" id="3_w8tve"]
[ext_resource type="StyleBox" path="res://DarkTheme/StyleBox/Panel.stylebox" id="4_3aepw"]
[ext_resource type="Script" path="res://Menu/GamepadTabController.gd" id="5_6krvp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xl3p0"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4ewd"]
bg_color = Color(0.439216, 0.439216, 0.439216, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.129412, 0.129412, 0.129412, 1)
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gnfbv"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.352941, 0.780392, 0.67451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofcni"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_vuv8h"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_dlqso"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aunuk"]
bg_color = Color(0.4, 0.4, 0.4, 0.65098)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocpm4"]
bg_color = Color(0.607843, 0.729412, 0.54902, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.184314, 0.352941, 0.12549, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gm2h7"]
bg_color = Color(0.866667, 0.298039, 0.305882, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.407843, 0.0980392, 0.109804, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjac4"]
bg_color = Color(0.498039, 0.901961, 0.352941, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.184314, 0.352941, 0.12549, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ef7yk"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.392157, 0.392157, 0.392157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5lrt"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.258824, 0.258824, 0.258824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_67hwj"]
default_font = ExtResource("2_wvpdx")
default_font_size = 26
Button/styles/disabled = SubResource("StyleBoxFlat_xl3p0")
Button/styles/focus = SubResource("StyleBoxFlat_v4ewd")
Button/styles/hover = SubResource("StyleBoxFlat_gnfbv")
Button/styles/normal = SubResource("StyleBoxFlat_xl3p0")
Button/styles/pressed = SubResource("StyleBoxFlat_ofcni")
CheckBox/icons/checked = SubResource("PlaceholderTexture2D_vuv8h")
CheckBox/icons/unchecked = SubResource("PlaceholderTexture2D_dlqso")
CheckBox/styles/focus = SubResource("StyleBoxFlat_aunuk")
CheckBox/styles/hover = SubResource("StyleBoxFlat_aunuk")
CheckBox/styles/hover_pressed = SubResource("StyleBoxFlat_ocpm4")
CheckBox/styles/normal = SubResource("StyleBoxFlat_gm2h7")
CheckBox/styles/pressed = SubResource("StyleBoxFlat_cjac4")
LineEdit/colors/font_uneditable_color = Color(1, 1, 1, 1)
LineEdit/fonts/font = ExtResource("1_bron4")
LineEdit/styles/focus = SubResource("StyleBoxFlat_ef7yk")
LineEdit/styles/normal = SubResource("StyleBoxFlat_w5lrt")

[node name="ReplaySelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_67hwj")
script = ExtResource("3_w8tve")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -322.0
offset_right = 322.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("4_3aepw")
tab_alignment = 1
clip_tabs = false
tab_focus_mode = 0
script = ExtResource("5_6krvp")

[node name="Local" type="ScrollContainer" parent="VBoxContainer/TabContainer"]
custom_minimum_size = Vector2(640, 480)
layout_mode = 2

[node name="LocalReplays" type="ItemList" parent="VBoxContainer/TabContainer/Local"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
auto_height = true
item_count = 2
item_0/text = "hagyma_Player239-00-35-453_2023-12-13.replay"
item_1/text = ""

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="SelectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"
